<resources>
    <string name="app_name">Calculadora Kotlin</string>
    <string name="number_9">9</string>
    <string name="number_8">8</string>
    <string name="number_7">7</string>
    <string name="number_6">6</string>
    <string name="number_5">5</string>
    <string name="number_4">4</string>
    <string name="number_3">3</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="number_0">0</string>
    <string name="operator_x">x</string>
    <string name="operator_div">/</string>
    <string name="operator_plus">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_equal">=</string>
    <string name="operator_root">√</string>
    <string name="operator_clear">C</string>
    <string name="open_parentheses">(</string>
    <string name="close_parentheses">)</string>
    <string name="comma">,</string>
</resources>
