<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnComma"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comma"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber2"
        app:layout_constraintVertical_bias="0.086"
        tools:layout_editor_absoluteX="93dp" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/operator_plus"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/button16"
        app:layout_constraintVertical_bias="0.086"
        tools:layout_editor_absoluteX="169dp" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="119dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/operator_equal"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnNumber2"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/number_2"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnNumber1"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber5" />

    <Button
        android:id="@+id/button16"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:text="@string/number_3"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="248dp" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/operator_minus"
        app:layout_constraintStart_toEndOf="@+id/button16"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/btnCloseParenthesis"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/close_parentheses"
        app:layout_constraintBottom_toTopOf="@+id/btnEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenParenthesis"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNumber6"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:text="@string/number_6"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/btnX"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/operator_x"
        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
        app:layout_constraintEnd_toStartOf="@+id/btnOpenParenthesis"
        app:layout_constraintStart_toEndOf="@+id/btnNumber6"
        app:layout_constraintTop_toBottomOf="@+id/btnDiv" />

    <Button
        android:id="@+id/btnOpenParenthesis"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:text="@string/open_parentheses"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="right"
        android:text="Hello World!"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="368dp"
        android:layout_height="453dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="42dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <Button
        android:id="@+id/btnNumber7"
        android:layout_width="65dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/number_7"
        app:layout_constraintEnd_toStartOf="@+id/btnNumber8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btnNumber8"
        android:layout_width="67dp"
        android:layout_height="81dp"
        android:layout_marginTop="24dp"
        android:text="@string/number_8"
        app:layout_constraintTop_toTopOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="87dp" />

    <Button
        android:id="@+id/btnNumber9"
        android:layout_width="60dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/number_9"
        app:layout_constraintStart_toEndOf="@+id/btnNumber8"
        app:layout_constraintTop_toTopOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="63dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/operator_div"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnNumber9"
        app:layout_constraintTop_toTopOf="@+id/btnNumber9" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="65dp"
        android:layout_height="79dp"
        android:text="@string/operator_clear"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="66dp" />

    <Button
        android:id="@+id/btnNumber4"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/number_4"
        app:layout_constraintBottom_toTopOf="@+id/btnNumber1"
        app:layout_constraintEnd_toStartOf="@+id/btnNumber5"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber7"
        app:layout_constraintVertical_bias="0.687" />

    <Button
        android:id="@+id/btnNumber5"
        android:layout_width="61dp"
        android:layout_height="81dp"
        android:text="@string/number_5"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/btnNumber1"
        android:layout_width="64dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/number_1"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/btnNumber0"
        android:layout_width="68dp"
        android:layout_height="83dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_0"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber1"
        app:layout_constraintVertical_bias="0.03" />

</android.support.constraint.ConstraintLayout>